--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <section id="portfolio" class="light">
       <header class="title">
         <h2>Portfolio</h2>
-        <p>Lorem ipsum Cupidatat sit irure nostrud ut deserunt ad enim id laboris. Lorem ipsum Enim proident et eu et minim voluptate eiusmod ullamco commodo aliqua amet.</p>
+        <p>In an era defined by digital transformation Registfy introducing a trailblazing force in cloud services. Our diverse portfolio empowers businesses with tailored solutions for growth and efficiency. Join us in unlocking innovation and embracing a limitless digital future.</p>
       </header>
 
       <div class="container-fluid">
