adding migration services

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="row">
           <ul id="filters" class="list-inline">
             <li data-filter="all" class="filter">All</li>
-            <li data-filter=".branding" class="filter">Branding</li> 
+            <li data-filter=".migration" class="filter">Migration Services</li> 
             <li data-filter=".graphic" class="filter">Graphic</li> 
             <li data-filter=".printing" class="filter">Printing</li> 
             <li data-filter=".video" class="filter">Video</li> 
@@ -234,11 +234,11 @@
             <script type="text/javascript">
             var portfolio = [
                     {
-                      category : "branding",
+                      category : "migration",
                       image : "images/p-1.png",
                       title : "Charming <span>Roxy</span>",
                       link : "#none",
-                      text : "Lorem ipsum Dolor in minim fugiat ut nisi occaecat fugiat. Lorem ipsum Quis tempor Ut enim officia deserunt consectetur."
+                      text : "The Migration Services entail assessing current infrastructure, planning tailored migration strategies, executing seamless transitions, prioritizing security, modernizing applications, integrating cloud-native services, documenting processes, and implementing continuous monitoring for optimized performance."
                     },
                     {
                       category : "graphic",
