change migration service

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     {
                       category : "migration",
                       image : "images/p-1.png",
-                      title : "Charming <span>Roxy</span>",
+                      title : "Migration <span>Services</span>",
                       link : "#none",
                       text : "The Migration Services entail assessing current infrastructure, planning tailored migration strategies, executing seamless transitions, prioritizing security, modernizing applications, integrating cloud-native services, documenting processes, and implementing continuous monitoring for optimized performance."
                     },
