--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Daraz by TEMPLATE STOCK</title>
+    <title>Registy. Avanced Cloud Solutions </title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
@@ -411,9 +411,9 @@
           <div class="col-md-6">
             <div class="skill">
               <ul class="skill-bar list-unstyled">
-                <li><span class="percentage" data-value="50%"></span><em>Branding</em></li>
-                <li><span class="percentage" data-value="95%"></span><em>Development</em></li>
-                <li><span class="percentage" data-value="22%"></span><em>Social</em></li>
+                <li><span class="percentage" data-value="90%"></span><em>Cloud Migration</em></li>
+                <li><span class="percentage" data-value="95%"></span><em>DevOps</em></li>
+                <li><span class="percentage" data-value="22%"></span><em>Development</em></li>
               </ul>
             </div>
           </div>
@@ -421,9 +421,9 @@
           <div class="col-md-6">
             <div class="skill">
               <ul class="skill-bar list-unstyled">
-                <li><span class="percentage" data-value="63%"></span><em>Graphic Design</em></li>
+                <li><span class="percentage" data-value="90%"></span><em>Cloud  Native</em></li>
                 <li><span class="percentage" data-value="90%"></span><em>Consulting</em></li>
-                <li><span class="percentage" data-value="43%"></span><em>Logo</em></li>
+                <li><span class="percentage" data-value="43%"></span><em>Security</em></li>
               </ul>
             </div>
           </div>
