--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registy. Avanced Cloud Solutions </title>
+    <title>Registfy. Avanced Cloud Solutions </title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
@@ -302,7 +302,7 @@
     <section id="team" class="light">
       <header class="title">
         <h2>Creative <span>Team</span></h2>
-        <p>Lorem ipsum Dolor et reprehenderit laborum deserunt aliquip incididunt tempor id non. Lorem ipsum Fugiat anim labore cupidatat consequat non in sit dolore anim anim consequat nisi.</p>
+        <p>Our team exemplifies exceptional professionalism in technology and cloud services, ensuring seamless and advanced solutions.</p>
       </header>
       
       <div class="container">
@@ -403,7 +403,7 @@
     <section id="info" class="dark">
       <header class="title">
         <h2>Our <span>Experties</span></h2>
-        <p>Lorem ipsum Nulla in incididunt esse tempor dolore ad voluptate aliquip magna sed in.</p>
+        <p>We offer a comprehensive range of services including Cloud Migration, Containerization, Security, and IT consulting. Our expertise extends beyond these offerings, allowing us to tailor solutions to your unique business needs.</p>
       </header>
 
       <div class="container experties">
@@ -413,7 +413,7 @@
               <ul class="skill-bar list-unstyled">
                 <li><span class="percentage" data-value="90%"></span><em>Cloud Migration</em></li>
                 <li><span class="percentage" data-value="95%"></span><em>DevOps</em></li>
-                <li><span class="percentage" data-value="22%"></span><em>Development</em></li>
+                <li><span class="percentage" data-value="87%"></span><em>SAP On AWS</em></li>
               </ul>
             </div>
           </div>
