--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
         var dataHeader = [
                             {
                               bigImage :"images/slide-1.jpg",
-                              title : "Minimal & Clean",
-							  author : "Templatestock"
+                              title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
+							  author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-2.jpg",
-                              title : "I'm A Creative Theme",
-                              author : "Templatestock"
+                              title : "Unlocking the Potential of Cloud to Drive Your Success",
+                              author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-3.jpg",
-                              title : "Achieve Success",
-                              author : "Templatestock"
+                              title : "Innovating Businesses Through Tailored Cloud Services.",
+                              author : "Registfy"
                             }
                         ],
             loaderSVG = new SVGLoader(document.getElementById('loader'), {speedIn : 600, speedOut : 600, easingIn : mina.easeinout});
@@ -166,7 +166,7 @@
     <section id="about" class="light">
       <header class="title">
         <h2>About <span>Us</span></h2>
-        <p>Lorem ipsum Esse esse cillum nisi cillum deserunt tempor ut pariatur qui officia. Lorem ipsum Magna eu irure sint <strong>occaecat</strong> cupidatat dolore minim irure cillum.</p>
+        <p>At <strong>Registfy</strong>, we're your trusted partner in the realm of cloud services, and we've proudly teamed up with Amazon Web Services (AWS) to bring you the future of digital innovation. Our journey began with a vision to empower businesses of all sizes to harness the full potential of cloud technology.</p>
       </header>
 
       <div class="container">
@@ -182,24 +182,24 @@
               <div class="about-content left animated" data-animate="fadeInLeft">
                 <div class="about-icon"><i class="fa fa-code"></i></div>
                 <div class="about-detail">
-                  <h4>Clean Code</h4>
-                  <p>Lorem ipsum Ad nisi dolore ut sit do dolor commodo sint ullamco. Lorem ipsum Magna enim eu irure sit eiusmod fugiat et. Lorem ipsum Consequat in cupidatat cupidatat non in non veniam dolore.</p>
+                  <h4>Our Mission</h4>
+                  <p>Our mission is clear: to guide businesses on their digital transformation journey by providing top-tier cloud solutions that drive efficiency, scalability, and growth. We believe that every company, no matter its size or industry, deserves access to the cutting-edge capabilities of the cloud.</p>
                 </div>
               </div>
 
               <div class="about-content left animated" data-animate="fadeInLeft">
                 <div class="about-icon"><i class="fa fa-desktop"></i></div>
                 <div class="about-detail">
-                  <h4>Fully Responsive</h4>
-                  <p>Lorem ipsum Ex labore dolor magna in proident ad reprehenderit consequat irure nostrud quis. Lorem ipsum Veniam velit non cupidatat nulla et proident.</p>
+                  <h4>Our Promise</h4>
+                  <p>When you choose Registfy, you're not just opting for cloud services – you're choosing a partner that's invested in your success. Our dedication to delivering reliable, secure, and scalable solutions is unwavering, and we're excited to be a part of your digital journey.</p>
                 </div>
               </div>
 
               <div class="about-content left animated" data-animate="fadeInLeft">
                 <div class="about-icon"><i class="fa fa-cube"></i></div>
                 <div class="about-detail">
-                  <h4>Multipurpose Design</h4>
-                  <p>Lorem ipsum Ea quis sint sint aliquip qui exercitation commodo non cupidatat do reprehenderit dolor. Lorem ipsum Non et minim incididunt sed labore in amet ea est pariatur.</p>
+                  <h4>Join Us in the Cloud Revolution</h4>
+                  <p>Embark on a transformational voyage with [Your Company Name]. Let's navigate the complexities of the digital landscape together, leveraging the power of AWS and the expertise of our team to unlock new possibilities and drive your business to unprecedented heights. Welcome to the future of cloud technology.</p>
                 </div>
               </div>
             </div>
