change font size

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
 
                     <div class="slider-content">
                       <h1></h1>
-                      <p>We are a creative agency from the earth of Bandung, Indonesia</p>
                     </div>
 
                   </div> <!-- /.col-md-12 -->
@@ -183,7 +182,7 @@
                 <div class="about-icon"><i class="fa fa-code"></i></div>
                 <div class="about-detail">
                   <h4>Our Mission</h4>
-                  <p>Our mission is clear: to guide businesses on their digital transformation journey by providing top-tier cloud solutions that drive efficiency, scalability, and growth. We believe that every company, no matter its size or industry, deserves access to the cutting-edge capabilities of the cloud.</p>
+                  <p class="font-size-medium">Our mission is clear: to guide businesses on their digital transformation journey by providing top-tier cloud solutions that drive efficiency, scalability, and growth. We believe that every company, no matter its size or industry, deserves access to the cutting-edge capabilities of the cloud.</p>
                 </div>
               </div>
 
@@ -206,7 +205,6 @@
           </div>
         </div> <!-- /.row table-row -->
       </div> <!-- /.container -->
-    </section>
 	
 	
 	    <!-- PORTFOLIO -->
