Changing slides font size

--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
         var dataHeader = [
                             {
                               bigImage :"images/slide-1.jpg",
-                              title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
-							  author : "Registfy"
+			      title : "<span class='font-size-medium'>Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure</span>",
+			      author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-2.jpg",
-                              title : "Unlocking the Potential of Cloud to Drive Your Success",
+			      title : "<span class='font-size-medium'>Unlocking the Potential of Cloud to Drive Your Success</span>",
                               author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-3.jpg",
-                              title : "Innovating Businesses Through Tailored Cloud Services.",
+			      title : "<span class='font-size-medium'>Innovating Businesses Through Tailored Cloud Services</span>",
                               author : "Registfy"
                             }
                         ],
@@ -182,7 +182,7 @@
                 <div class="about-icon"><i class="fa fa-code"></i></div>
                 <div class="about-detail">
                   <h4>Our Mission</h4>
-                  <p class="font-size-medium">Our mission is clear: to guide businesses on their digital transformation journey by providing top-tier cloud solutions that drive efficiency, scalability, and growth. We believe that every company, no matter its size or industry, deserves access to the cutting-edge capabilities of the cloud.</p>
+                  <p>Our mission is clear: to guide businesses on their digital transformation journey by providing top-tier cloud solutions that drive efficiency, scalability, and growth. We believe that every company, no matter its size or industry, deserves access to the cutting-edge capabilities of the cloud.</p>
                 </div>
               </div>
 
