Changing slides font size

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </span>
               <div>
                 <span>Prev Photo</span>
-                <h3>...</h3>
+                <h1>...</h1>
                 <p>...</p>
                 <img alt="Previous thumb">
               </div>
@@ -124,7 +124,7 @@
               </span>
               <div>
                 <span>Next Photo</span>
-                <h3>...</h3>
+                <h2>...</h2>
                 <p>...</p>
                 <img alt="Next thumb">
               </div>
@@ -136,17 +136,17 @@
         var dataHeader = [
                             {
                               bigImage :"images/slide-1.jpg",
-			      title : "<span class='font-size-medium'>Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure</span>",
+			      title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
 			      author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-2.jpg",
-			      title : "<span class='font-size-medium'>Unlocking the Potential of Cloud to Drive Your Success</span>",
+			      title : "font-size-medium'>Unlocking the Potential of Cloud to Drive Your Success",
                               author : "Registfy"
                             },
                             {
                               bigImage :"images/slide-3.jpg",
-			      title : "<span class='font-size-medium'>Innovating Businesses Through Tailored Cloud Services</span>",
+			      title : "Innovating Businesses Through Tailored Cloud Services",
                               author : "Registfy"
                             }
                         ],
