Changing slides font size

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </span>
               <div>
                 <span>Prev Photo</span>
-                <h1>...</h1>
+                <h3>...</h3>
                 <p>...</p>
                 <img alt="Previous thumb">
               </div>
@@ -124,7 +124,7 @@
               </span>
               <div>
                 <span>Next Photo</span>
-                <h2>...</h2>
+                <h3>...</h3>
                 <p>...</p>
                 <img alt="Next thumb">
               </div>
@@ -139,9 +139,14 @@
 			      title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
 			      author : "Registfy"
                             },
+                         var dataHeader = [
                             {
+                              bigImage :"images/slide-1.jpg",
+                              title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
+                              author : "Registfy"
+                            },           {
                               bigImage :"images/slide-2.jpg",
-			      title : "font-size-medium'>Unlocking the Potential of Cloud to Drive Your Success",
+			      title : "Unlocking the Potential of Cloud to Drive Your Success",
                               author : "Registfy"
                             },
                             {
