--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
 
                     <div class="slider-content">
                       <h1></h1>
-                      <p>We are a creative agency from the earth of Bandung, Indonesia</p>
                     </div>
 
                   </div> <!-- /.col-md-12 -->
@@ -199,7 +198,7 @@
                 <div class="about-icon"><i class="fa fa-cube"></i></div>
                 <div class="about-detail">
                   <h4>Join Us in the Cloud Revolution</h4>
-                  <p>Embark on a transformational voyage with [Your Company Name]. Let's navigate the complexities of the digital landscape together, leveraging the power of AWS and the expertise of our team to unlock new possibilities and drive your business to unprecedented heights. Welcome to the future of cloud technology.</p>
+                  <p>Embark on a transformational voyage with Registify. Let's navigate the complexities of the digital landscape together, leveraging the power of AWS and the expertise of our team to unlock new possibilities and drive your business to unprecedented heights. Welcome to the future of cloud technology.</p>
                 </div>
               </div>
             </div>
