fixing slide text

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         var dataHeader = [
                             {
                               bigImage :"images/slide-1.jpg",
-                              title : "Empowering Your Business with Seamless Cloud Solutions, Where Innovation Meets Infrastructure",
+                              title : "Innovative Cloud Solutions Empowering Business Infrastructure",
 							  author : "Registfy"
                             },
                             {
